Get rid of maxPrincipalId from ConcordConfigUtil<br>\n Get rid of configuration files and temporary directory after gathering the data.<br>\n Introduced a new property “keep.temporary.files” that keeps temporary files for debug purpose.<br>\n ConfigUtilHelpers has a new method named “getPrincipals” to read and return a map of ids (a map of principal and client ids).<br>\n ConfigUtilHelpers: conc_genconfig output is now redirected to configGenOutput.txt file.<br>\n ConfigUtilHelpers: conc_genconfig error stream is now redirected to configGenError.txt file.<br>\n ConfigUtilHelpers: Make the command for conc_gen_config configurable.<br>\n ErrorCode.CONCORD_CONFIGURATION_INVALID_PRINCIPALS to report invalid principals file or content.